Infrastruktur IoC, Autofac

--- a/Spellchecker/src/Tests/Tests.csproj
+++ b/Spellchecker/src/Tests/Tests.csproj
@@ -48,7 +48,12 @@
     <Compile Include="Text\TextSplittingTests.cs" />
     <Compile Include="_Code\BaseTest.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{A741D73C-5604-4565-A7DE-2B64AF88A0C0}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
