--- a/Spellchecker/src/Core/Core.csproj
+++ b/Spellchecker/src/Core/Core.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac">
+      <HintPath>..\..\lib\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastruture\AutofacCoreModule.cs" />
+    <Compile Include="Infrastruture\Container.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\Text.cs" />
     <Compile Include="Text\TextElement.cs" />
     <Compile Include="Text\TextElementList.cs" />
-    <Compile Include="Text\TextSplitter.cs" />
+    <Compile Include="Text\TextElementReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SpellChecker\" />
