--- a/Spellchecker/src/Core/Core.csproj
+++ b/Spellchecker/src/Core/Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Text\TextElement.cs" />
     <Compile Include="Text\TextElementList.cs" />
     <Compile Include="Text\TextElementReader.cs" />
+    <Compile Include="Text\ElementSplitRule\TextElementSplitRuleService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SpellChecker\" />
