--- a/Spellchecker/src/Tests/Tests.csproj
+++ b/Spellchecker/src/Tests/Tests.csproj
@@ -34,6 +34,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="SharpTestsEx.NUnit">
+      <HintPath>..\..\lib\SharpTestsEx.NUnit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
