--- a/Spellchecker/src/Tests/Tests.csproj
+++ b/Spellchecker/src/Tests/Tests.csproj
@@ -48,7 +48,9 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spellchecker\SpellcheckerTests.cs" />
+    <Compile Include="Text\TextElementListTests.cs" />
     <Compile Include="Text\TextElementReaderTests.cs" />
+    <Compile Include="Text\TextElementTests.cs" />
     <Compile Include="_Code\BaseTest.cs" />
   </ItemGroup>
   <ItemGroup>
