--- a/CodingDojo4/.gitignore
+++ b/CodingDojo4/.gitignore
@@ -5,8 +5,8 @@ obj/
 [Dd]ebug/   
 [Rr]elease/   
 _Re[Ss]harper.*
-*.resharper
-*.resharper.user
+*.[Rr]e[Ss]harper
+*.[Rr]e[Ss]harper.user
 *.suo
 *.cache
 *~
